<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View" />
        <import type="dev.fsnasser.marvelcharacters.utils.data.Resource.Status" />

        <variable
            name="viewModel"
            type="dev.fsnasser.marvelcharacters.ui.views.main.MainViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.views.main.CharactersFragment">

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/srCharacters"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:refreshing="@{viewModel.charactersStatus == Status.REFRESHING}"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvCharacters"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="@{viewModel.charactersStatus == Status.SUCCESS || viewModel.charactersStatus == Status.LOADING || viewModel.charactersStatus == Status.REFRESHING ? View.VISIBLE : View.GONE}"
                android:clipToPadding="false"
                android:orientation="vertical"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:spanCount="2"
                tools:listitem="@layout/character_list_item" />

        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

        <ProgressBar
            android:id="@+id/pbCharacters"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="@{viewModel.charactersStatus == Status.LOADING ? View.VISIBLE : View.GONE}"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:visibility="gone" />

        <include
            android:id="@+id/iCharactersWarning"
            layout="@layout/warning_message"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:status="@{viewModel.charactersStatus}"
            app:warningMessage="@{viewModel.charactersWarningMessage}"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:visibility="gone" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>