<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/black"
        tools:context=".ui.views.main.MainActivity">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tlCharactersMain"
            android:layout_width="0dp"
            android:layout_height="?attr/actionBarSize"
            android:elevation="6dp"
            android:layout_gravity="top"
            android:background="@color/colorPrimary"
            android:focusable="true"
            android:focusableInTouchMode="true"
            app:tabTextColor="@android:color/white"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/vpCharactersMain"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tlCharactersMain" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>