...
            android:contentDescription="@null"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tvWarningMessage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:gravity="center"
            android:text="@{warningMessage}"
            app:layout_constraintTop_toBottomOf="@id/ivWarningMessage"
...
